feat(blog): restore full FAQ content and add print/share; add print/share + related links to AI Guide

--- a/frontend/blog_ai_guide.html
+++ b/frontend/blog_ai_guide.html
@@ -175,6 +175,24 @@
               <li><strong>教育培训</strong>：教学插图、科普图解、演示材料</li>
             </ul>
           </section>
+          <footer class="article-footer">
+            <div class="article-actions" style="display: flex; gap: 12px; justify-content: center">
+              <button onclick="window.print()" class="action-btn">📄 打印文章</button>
+              <button
+                onclick="navigator.share && navigator.share({title:'AI图像生成完整指南', url: location.href})"
+                class="action-btn"
+              >
+                📤 分享文章
+              </button>
+            </div>
+            <div class="related-articles" style="text-align: center">
+              <h4>相关文章</h4>
+              <ul style="list-style: none; padding: 0; margin: 0">
+                <li><a href="blog_prompt_engineering.html">提示词工程专业教程</a></li>
+                <li><a href="blog_tutorial.html">AISTONE平台使用教程</a></li>
+              </ul>
+            </div>
+          </footer>
         </section>
       </article>
     </main>
