chore(blog): remove modal JS/CSS; add OG/Twitter & Breadcrumb; article pages SEO JSON-LD; unify footer; update sitemap; add RSS

--- a/frontend/blog_prompt_engineering.html
+++ b/frontend/blog_prompt_engineering.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-i18n="promptEngineeringTitle">提示词工程专业教程</title>
     <link rel="canonical" href="https://aistone.org/blog_prompt_engineering.html" />
+    <meta
+      name="description"
+      content="提示词工程完整教程：基础语法、权重控制、负面提示词、风格融合与实战案例。"
+    />
+    <meta
+      name="keywords"
+      content="提示词工程, Prompt Engineering, AI绘画, 扩散模型, 权重, 负面提示词"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="提示词工程专业教程" />
+    <meta property="og:description" content="从基础到高级策略的完整提示词工程指南，附实战案例。" />
+    <meta property="og:url" content="https://aistone.org/blog_prompt_engineering.html" />
+    <meta property="og:image" content="https://aistone.org/assets/logo.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="提示词工程专业教程" />
+    <meta name="twitter:description" content="从基础到高级策略的完整提示词工程指南，附实战案例。" />
+    <meta name="twitter:image" content="https://aistone.org/assets/logo.svg" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -270,7 +287,9 @@
 
     <footer id="contact">
       <div class="footer-grid">
-        <div class="footer-left" data-i18n="footerCopyright">&copy; 2025 AISTONE</div>
+        <div class="footer-left" data-i18n="footerCopyrightFull">
+          © 2025 AISTONE · All rights reserved · aistone.org
+        </div>
         <div class="footer-center">
           <a href="#" class="footer-icon" aria-label="Twitter"
             ><svg width="28" height="28" fill="none" viewBox="0 0 24 24">
@@ -297,6 +316,52 @@
       </div>
     </footer>
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "headline": "提示词工程专业教程",
+        "description": "提示词工程完整教程：基础语法、权重控制、负面提示词、风格融合与实战案例。",
+        "url": "https://aistone.org/blog_prompt_engineering.html",
+        "image": "https://aistone.org/assets/logo.svg",
+        "author": { "@type": "Organization", "name": "AISTONE" },
+        "publisher": {
+          "@type": "Organization",
+          "name": "AISTONE",
+          "logo": { "@type": "ImageObject", "url": "https://aistone.org/assets/logo.svg" }
+        },
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://aistone.org/blog_prompt_engineering.html"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "首页",
+            "item": "https://aistone.org/index.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "博客",
+            "item": "https://aistone.org/blog.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "提示词工程专业教程",
+            "item": "https://aistone.org/blog_prompt_engineering.html"
+          }
+        ]
+      }
+    </script>
     <script src="js/i18n.js"></script>
   </body>
 </html>
