--- a/frontend/blog_ai_guide.html
+++ b/frontend/blog_ai_guide.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-i18n="aiGuideTitle">AI图像生成完整指南</title>
     <link rel="canonical" href="https://aistone.org/blog_ai_guide.html" />
+    <meta
+      name="description"
+      content="AI图像生成完整指南：扩散模型、FLUX、Stable Diffusion，对比与应用场景全解读。"
+    />
+    <meta
+      name="keywords"
+      content="AI图像生成, 扩散模型, FLUX, Stable Diffusion, 图像AI, 技术指南"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="AI图像生成完整指南" />
+    <meta property="og:description" content="扩散模型机制、主流模型解析与最佳实践的完整指南。" />
+    <meta property="og:url" content="https://aistone.org/blog_ai_guide.html" />
+    <meta property="og:image" content="https://aistone.org/assets/logo.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AI图像生成完整指南" />
+    <meta name="twitter:description" content="扩散模型机制、主流模型解析与最佳实践的完整指南。" />
+    <meta name="twitter:image" content="https://aistone.org/assets/logo.svg" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -199,7 +216,9 @@
 
     <footer id="contact">
       <div class="footer-grid">
-        <div class="footer-left" data-i18n="footerCopyright">&copy; 2025 AISTONE</div>
+        <div class="footer-left" data-i18n="footerCopyrightFull">
+          © 2025 AISTONE · All rights reserved · aistone.org
+        </div>
         <div class="footer-center">
           <a href="#" class="footer-icon" aria-label="Twitter"
             ><svg width="28" height="28" fill="none" viewBox="0 0 24 24">
@@ -226,6 +245,49 @@
       </div>
     </footer>
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "headline": "AI图像生成完整指南",
+        "description": "AI图像生成完整指南：扩散模型、FLUX、Stable Diffusion，对比与应用场景全解读。",
+        "url": "https://aistone.org/blog_ai_guide.html",
+        "image": "https://aistone.org/assets/logo.svg",
+        "author": { "@type": "Organization", "name": "AISTONE" },
+        "publisher": {
+          "@type": "Organization",
+          "name": "AISTONE",
+          "logo": { "@type": "ImageObject", "url": "https://aistone.org/assets/logo.svg" }
+        },
+        "mainEntityOfPage": { "@type": "WebPage", "@id": "https://aistone.org/blog_ai_guide.html" }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "首页",
+            "item": "https://aistone.org/index.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "博客",
+            "item": "https://aistone.org/blog.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "AI图像生成完整指南",
+            "item": "https://aistone.org/blog_ai_guide.html"
+          }
+        ]
+      }
+    </script>
     <script src="js/i18n.js"></script>
   </body>
 </html>
