--- a/frontend/blog_faq.html
+++ b/frontend/blog_faq.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-i18n="faqTitle">常见问题解答</title>
     <link rel="canonical" href="https://aistone.org/blog_faq.html" />
+    <meta
+      name="description"
+      content="AISTONE 常见问题：费用与账号、图片生成、语音合成、技术与使用、版权法律与未来规划。"
+    />
+    <meta name="keywords" content="AISTONE FAQ, 常见问题, 故障排除, 帮助中心, 使用问题" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="常见问题解答" />
+    <meta
+      property="og:description"
+      content="涵盖费用账号、图片与语音生成、技术支持与法律问题的FAQ。"
+    />
+    <meta property="og:url" content="https://aistone.org/blog_faq.html" />
+    <meta property="og:image" content="https://aistone.org/assets/logo.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="常见问题解答" />
+    <meta
+      name="twitter:description"
+      content="涵盖费用账号、图片与语音生成、技术支持与法律问题的FAQ。"
+    />
+    <meta name="twitter:image" content="https://aistone.org/assets/logo.svg" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -285,7 +305,9 @@
 
     <footer id="contact">
       <div class="footer-grid">
-        <div class="footer-left" data-i18n="footerCopyright">&copy; 2025 AISTONE</div>
+        <div class="footer-left" data-i18n="footerCopyrightFull">
+          © 2025 AISTONE · All rights reserved · aistone.org
+        </div>
         <div class="footer-center">
           <a href="#" class="footer-icon" aria-label="Twitter"
             ><svg width="28" height="28" fill="none" viewBox="0 0 24 24">
@@ -312,6 +334,49 @@
       </div>
     </footer>
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "headline": "常见问题解答",
+        "description": "AISTONE 常见问题：费用与账号、图片生成、语音合成、技术与使用、版权法律与未来规划。",
+        "url": "https://aistone.org/blog_faq.html",
+        "image": "https://aistone.org/assets/logo.svg",
+        "author": { "@type": "Organization", "name": "AISTONE" },
+        "publisher": {
+          "@type": "Organization",
+          "name": "AISTONE",
+          "logo": { "@type": "ImageObject", "url": "https://aistone.org/assets/logo.svg" }
+        },
+        "mainEntityOfPage": { "@type": "WebPage", "@id": "https://aistone.org/blog_faq.html" }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "首页",
+            "item": "https://aistone.org/index.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "博客",
+            "item": "https://aistone.org/blog.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "常见问题解答",
+            "item": "https://aistone.org/blog_faq.html"
+          }
+        ]
+      }
+    </script>
     <script src="js/i18n.js"></script>
   </body>
 </html>
