--- a/frontend/blog_tutorial.html
+++ b/frontend/blog_tutorial.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-i18n="tutorialTitle">AISTONE平台使用教程</title>
     <link rel="canonical" href="https://aistone.org/blog_tutorial.html" />
+    <meta
+      name="description"
+      content="AISTONE平台使用教程：从快速开始到模型选择、参数设置、语音合成与常见问题。"
+    />
+    <meta
+      name="keywords"
+      content="AISTONE 教程, 使用教程, 图像生成, 语音合成, 参数设置, 常见问题"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="AISTONE平台使用教程" />
+    <meta
+      property="og:description"
+      content="从快速开始到模型选择、参数设置、语音合成与常见问题的完整教程。"
+    />
+    <meta property="og:url" content="https://aistone.org/blog_tutorial.html" />
+    <meta property="og:image" content="https://aistone.org/assets/logo.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AISTONE平台使用教程" />
+    <meta
+      name="twitter:description"
+      content="从快速开始到模型选择、参数设置、语音合成与常见问题的完整教程。"
+    />
+    <meta name="twitter:image" content="https://aistone.org/assets/logo.svg" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -341,7 +364,9 @@
 
     <footer id="contact">
       <div class="footer-grid">
-        <div class="footer-left" data-i18n="footerCopyright">&copy; 2025 AISTONE</div>
+        <div class="footer-left" data-i18n="footerCopyrightFull">
+          © 2025 AISTONE · All rights reserved · aistone.org
+        </div>
         <div class="footer-center">
           <a href="#" class="footer-icon" aria-label="Twitter"
             ><svg width="28" height="28" fill="none" viewBox="0 0 24 24">
@@ -368,6 +393,49 @@
       </div>
     </footer>
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "headline": "AISTONE平台使用教程",
+        "description": "AISTONE平台使用教程：从快速开始到模型选择、参数设置、语音合成与常见问题。",
+        "url": "https://aistone.org/blog_tutorial.html",
+        "image": "https://aistone.org/assets/logo.svg",
+        "author": { "@type": "Organization", "name": "AISTONE" },
+        "publisher": {
+          "@type": "Organization",
+          "name": "AISTONE",
+          "logo": { "@type": "ImageObject", "url": "https://aistone.org/assets/logo.svg" }
+        },
+        "mainEntityOfPage": { "@type": "WebPage", "@id": "https://aistone.org/blog_tutorial.html" }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "首页",
+            "item": "https://aistone.org/index.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "博客",
+            "item": "https://aistone.org/blog.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "AISTONE平台使用教程",
+            "item": "https://aistone.org/blog_tutorial.html"
+          }
+        ]
+      }
+    </script>
     <script src="js/i18n.js"></script>
   </body>
 </html>
